fixing overflow on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ main {
 
 /* HERO HEADER */
 .hero {
-    width: 100vw;
+    width: 100%;
     height: auto;
     max-width: 100%;
     overflow: hidden;
@@ -534,5 +534,9 @@ footer {
         width: 100%;
         max-width: 100%;
         box-sizing: border-box;
+      }
+      
+      * {
+        outline: 1px solid red;
       }
       
